# difference_equations_in_rover_movement

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: feature_template.yaml
TrailblazerML/: README.md
TrailblazerML/install/: local_setup.sh  setup.sh
TrailblazerML/install/gazebo_viz/share/gazebo_viz/: package.sh  package.xml
TrailblazerML/install/gazebo_viz/share/gazebo_viz/config/: ball_tracker_params_robot.yaml  ball_tracker_params_sim.yaml  empty.yaml  gaz_ros2_ctl_use_sim.yaml  gazebo_params.yaml  joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  my_controllers_left.yaml  my_controllers_right.yaml  nav2_params.yaml  twist_mux.yaml
TrailblazerML/install/gazebo_viz/share/gazebo_viz/description/: camera.xacro  depth_camera.xacro  face.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
TrailblazerML/install/gazebo_viz/share/gazebo_viz/launch/: ball_tracker.launch.py  camera.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  (+5 more)
TrailblazerML/install/rover_teleop_twist_joy/share/rover_teleop_twist_joy/: package.sh  package.xml
TrailblazerML/install/trailblazerml/share/trailblazerml/: package.sh  package.xml
TrailblazerML/log/: latest_build
frontend/: README.md  frontend.py  frontend_no_v.py  frontend_v.py  pyproject.toml  rozniczkowe.py  rozniczkowe_zmienne_v.py
ros2_ws/: README.md
ros2_ws/src/rover_control/: setup.py
ros2_ws/src/rover_control/rover_control/: diff_drive_test.py  publisher_member_function.py
(+6 files in other folders)
